// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SyncEditor component renders as expected 1`] = `
<DocumentFragment>
  <div
    class="sync-editor__container"
  >
    <div
      class="pf-c-code-editor pf-m-read-only"
    >
      <div
        class="pf-c-code-editor__header"
      >
        <div
          class="pf-c-code-editor__controls"
        >
          <div
            class="sy-c-code-editor__title"
          >
            Policy YAML
          </div>
          <div
            style="display: flex;"
          >
            <button
              aria-disabled="false"
              aria-label="Find"
              class="pf-c-button pf-m-control"
              data-ouia-component-id="OUIA-Generated-Button-control-1"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              id="search-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                />
              </svg>
            </button>
            <button
              aria-disabled="false"
              aria-label="Copy to clipboard"
              aria-labelledby="copy-button code-content"
              class="pf-c-button pf-m-plain"
              data-ouia-component-id="OUIA-Generated-Button-plain-1"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              id="copy-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 448 512"
                width="1em"
              >
                <path
                  d="M320 448v40c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V120c0-13.255 10.745-24 24-24h72v296c0 30.879 25.121 56 56 56h168zm0-344V0H152c-13.255 0-24 10.745-24 24v368c0 13.255 10.745 24 24 24h272c13.255 0 24-10.745 24-24V128H344c-13.2 0-24-10.8-24-24zm120.971-31.029L375.029 7.029A24 24 0 0 0 358.059 0H352v96h96v-6.059a24 24 0 0 0-7.029-16.97z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="pf-c-code-editor__header-main"
        />
      </div>
      <div
        class="pf-c-code-editor__main"
      >
        <div
          class="pf-c-code-editor__code"
          tabindex="0"
        >
          <textarea
            aria-label="monaco"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SyncEditor component renders as expected when a dependency compliance is invalid 1`] = `
<DocumentFragment>
  <div
    class="sync-editor__container"
  >
    <div
      class="pf-c-code-editor pf-m-read-only"
    >
      <div
        class="pf-c-code-editor__header"
      >
        <div
          class="pf-c-code-editor__controls"
        >
          <div
            class="sy-c-code-editor__title"
          >
            Policy YAML
          </div>
          <div
            style="display: flex;"
          >
            <button
              aria-disabled="false"
              aria-label="Find"
              class="pf-c-button pf-m-control"
              data-ouia-component-id="OUIA-Generated-Button-control-2"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              id="search-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                />
              </svg>
            </button>
            <button
              aria-disabled="false"
              aria-label="Copy to clipboard"
              aria-labelledby="copy-button code-content"
              class="pf-c-button pf-m-plain"
              data-ouia-component-id="OUIA-Generated-Button-plain-2"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              id="copy-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 448 512"
                width="1em"
              >
                <path
                  d="M320 448v40c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V120c0-13.255 10.745-24 24-24h72v296c0 30.879 25.121 56 56 56h168zm0-344V0H152c-13.255 0-24 10.745-24 24v368c0 13.255 10.745 24 24 24h272c13.255 0 24-10.745 24-24V128H344c-13.2 0-24-10.8-24-24zm120.971-31.029L375.029 7.029A24 24 0 0 0 358.059 0H352v96h96v-6.059a24 24 0 0 0-7.029-16.97z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="pf-c-code-editor__header-main"
        />
      </div>
      <div
        class="pf-c-code-editor__main"
      >
        <div
          class="pf-c-code-editor__code"
          tabindex="0"
        >
          <textarea
            aria-label="monaco"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SyncEditor component renders as expected when a dependency namespace is invalid 1`] = `
<DocumentFragment>
  <div
    class="sync-editor__container"
  >
    <div
      class="pf-c-code-editor pf-m-read-only"
    >
      <div
        class="pf-c-code-editor__header"
      >
        <div
          class="pf-c-code-editor__controls"
        >
          <div
            class="sy-c-code-editor__title"
          >
            Policy YAML
          </div>
          <div
            style="display: flex;"
          >
            <button
              aria-disabled="false"
              aria-label="Find"
              class="pf-c-button pf-m-control"
              data-ouia-component-id="OUIA-Generated-Button-control-3"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              id="search-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                />
              </svg>
            </button>
            <button
              aria-disabled="false"
              aria-label="Copy to clipboard"
              aria-labelledby="copy-button code-content"
              class="pf-c-button pf-m-plain"
              data-ouia-component-id="OUIA-Generated-Button-plain-3"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              id="copy-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 448 512"
                width="1em"
              >
                <path
                  d="M320 448v40c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V120c0-13.255 10.745-24 24-24h72v296c0 30.879 25.121 56 56 56h168zm0-344V0H152c-13.255 0-24 10.745-24 24v368c0 13.255 10.745 24 24 24h272c13.255 0 24-10.745 24-24V128H344c-13.2 0-24-10.8-24-24zm120.971-31.029L375.029 7.029A24 24 0 0 0 358.059 0H352v96h96v-6.059a24 24 0 0 0-7.029-16.97z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="pf-c-code-editor__header-main"
        />
      </div>
      <div
        class="pf-c-code-editor__main"
      >
        <div
          class="pf-c-code-editor__code"
          tabindex="0"
        >
          <textarea
            aria-label="monaco"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
